2017-12-25  larissa9839  <larissa9839@gmail.com>

	* tryXpath/popup/popup.css:
	Modify some styles.

	* tryXpath/manifest.json:
	Change version. 1.2.0 -> 1.3.0b1

	* test/unit_test/jasmine/spec/spec.js:
	Get textContent as value if type is Element.

2017-11-29  larissa9839  <larissa9839@gmail.com>

	* tryXpath/scripts/try_xpath_content.js:
	Define invalidExecutionId constants.
	Fix createResultMessage function.

	* tryXpath/popup/popup.html (Main):
	Add focus-designated-frame button.

	* tryXpath/scripts/try_xpath_content.js: 
	Define createResultMessage function.
	Define getDesignatedWindow function.

2017-11-28  larissa9839  <larissa9839@gmail.com>

	* tryXpath/scripts/try_xpath_content.js:
	Define parseFrameDesignation function.
	Fix parseFrameDesignation function.

2017-11-27  larissa9839  <larissa9839@gmail.com>

	* tryXpath/scripts/try_xpath_content.js:
	Define removeStyleElement function.
	Define inBlankWindow variable.
	Modify updateStyleElement function.

2017-11-26  larissa9839  <larissa9839@gmail.com>

	* tryXpath/scripts/try_xpath_content.js:
	Define updateStyleElement function.
	Define styleElementHeader constants.
	Define updateAllStyleElements function.

2017-11-25  larissa9839  <larissa9839@gmail.com>

	* tryXpath/scripts/try_xpath_content.js:
	Define insertedStyleElements variable;
	Define findStyleParent function.

2017-11-23  larissa9839  <larissa9839@gmail.com>

	* tryXpath/scripts/try_xpath_content.js:
	Define findFrameByMessage function.
	Define genericListener.listeners.initializeBlankWindows function.
	Define initBlankWindow function.

	* tryXpath/scripts/try_xpath_functions.js:
	Define findFrameElement function.
	Define findFrameIndex function.

	* tryXpath/scripts/try_xpath_content.js:
	Remove findFrameElement function.

2017-11-22  larissa9839  <larissa9839@gmail.com>

	* tryXpath/scripts/try_xpath_content.js:
	Define genericListener.listeners.initializeBlankWindows function.

2017-11-18  larissa9839  <larissa9839@gmail.com>
