@@ -1,5 +1,14 @@
 2017-12-25  larissa9839  <larissa9839@gmail.com>
 
+	* tryXpath/background/try_xpath_background.js:
+	Define genericListener.listeners.requestInsertStyleToPopup function.
+
+	* tryXpath/popup/popup.js:
+	Define genericListener.listeners.insertStyleToPopup function.
+
+	* tryXpath/background/try_xpath_background.js:
+	Define popupCss variable.
+
 	* tryXpath/popup/popup.css:
 	Modify some styles.
 
